# hubris

./: .envrc  .gitignore  shell.nix
app/sound-wave-stm32f4/: Cargo.toml  README.md  app.toml
app/sound-wave-stm32f4/src/: main.rs
chips/stm32f4/: openocd.cfg
task/led-matrix/: Cargo.toml  readme.md
task/led-matrix/src/: main.rs
task/ping/src/: main.rs
