[package]
edition = "2021"
readme = "README.md"
name = "sound-wave-stm32f4"
version = "0.1.0"

[features]
dump = ["kern/dump"]

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
stm32f4 = { workspace = true, optional = true, features = ["stm32f407", "rt"] }

kern = { path = "../../sys/kern" }


# this lets you use `cargo fix`!
[[bin]]
name = "sound-wave-stm32f4"
test = false
doctest = false
bench = false
